# CruceGame

./: .gitignore  CMakeLists.txt
src/: cruceGame  main.c
src/cli/: cli.c  cli.h
src/cli/.deps/: cli.Plo
src/multiplayerCurses/: ircHandlers.c  ircHandlers.h  multiplayerCurses.c
src/multiplayerCurses/.deps/: ircHandlers.Po  multiplayerCurses.Po
src/networking/.deps/: network.Plo
src/parser/: parser.c
src/parser/.deps/: parser.Plo
src/singlePlayerCurses/: singlePlayerCurses.c
src/singlePlayerCurses/.deps/: singlePlayerCurses.Po
test/test-libCruceGame/.deps/: test-deck.Plo  test-game.Plo  test-round.Plo  test-team.Plo
